Assert fails when entering another scene while in edit mode #92357

Closed
opened 2021-10-20 00:42:05 +02:00 by Germano Cavalcante · 8 comments

Blender Version
Broken: 3.0.0, d7b4350749, master, 2021-10-19
Worked: to check

Short description of error

BLI_assert failed: ...\source\blender\windowmanager\intern\wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == area->runtime.tool'

Exact steps for others to reproduce the error

  • With the cube selected, enter edit mode
  • Activate any tool (transform for example)
  • Click button to create new scene.
**Blender Version** Broken: 3.0.0, d7b4350749c, master, 2021-10-19 Worked: to check **Short description of error** ``` BLI_assert failed: ...\source\blender\windowmanager\intern\wm_toolsystem.c:86, WM_toolsystem_ref_from_context(), at 'tref == area->runtime.tool' ``` **Exact steps for others to reproduce the error** - With the cube selected, enter edit mode - Activate any tool (transform for example) - Click button to create new scene.
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

Assert added in 987d1df5

Assert added in 987d1df5

This issue was referenced by 3e1baa7d53

This issue was referenced by 3e1baa7d539757b8e5fa870d4909354e0b5645b9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-10-22 06:38:06 +02:00

In #92357#1238420, @mano-wii wrote:
Assert added in 987d1df5

Note that I couldn't redo the assert in older Blender versions, since fixing the problem was straightforward - bisecting the when the assert started happening didn't seem very useful.

> In #92357#1238420, @mano-wii wrote: > Assert added in 987d1df5 Note that I couldn't redo the assert in older Blender versions, since fixing the problem was straightforward - bisecting the when the assert started happening didn't seem very useful.
Author
Member

Good to see the problem has been fixed.

I'm not sure I get the point, but I didn't bisected when the assert started and I just pointed it out when the code was included (to get developer feedback).

Since bisect takes a long time, and since the problem involves asserting that it is only included in Debug, it is difficult to know which version to start bisecting.

In such cases it might be better to ask first whether bisecting is worth it.

Good to see the problem has been fixed. I'm not sure I get the point, but I didn't bisected when the assert started and I just pointed it out when the code was included (to get developer feedback). Since bisect takes a long time, and since the problem involves asserting that it is only included in Debug, it is difficult to know which version to start bisecting. In such cases it might be better to ask first whether bisecting is worth it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92357
No description provided.