Fix T92357: assert changing scenes while in edit mode

ScrArea.runtime.tool needs to be updated after switching scenes.